Ready with all of the logic from my side - there are a few todos left that we need to discuss